--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 2020
     environment:
       KAFKA_URL: "127.0.0.1:9092"
+      KAFKA_TOPIC: "test"
     volumes:
       - ./:/app/
 
